# server/api/controllers/auth/controller.js
@@ -1,9 +1,10 @@
 import userService from "../../services/user.service";
 import l from "../../../common/logger";
 import authenticationService from "../../services/authentication.service";
+import ValidationService from "../../services/validation.service";
 
 export class Controller {
-  async joinWaitlist(req, res) {
+  async joinWaitlist(req, res, next) {
     try {
       if (!req.body.email) {
         res.status(400).send("Email missing!");
@@ -16,40 +17,40 @@ export class Controller {
       });
     } catch (err) {
       l.error(err, "JOIN WAITLIST CONTROLLER ERROR");
+      next(err);
     }
   }
-  async signup(req, res) {
-    try {
-      if (!req.body.email) {
-        res.status(400).send("Email missing!");
-      }
 
-      if (await userService.userExist({ email: req.body.email })) {
-        res.status(400).send("Email already exists!");
-      } else {
-        const userId = await userService.signup(req.body);
-        const token = authenticationService.generateToken(userId);
-        res.status(200).send(token);
-      }
+  async signup(req, res, next) {
+    try {
+      let { email, firstName, lastName, password } = req.body;
+
+      email = ValidationService.normalizeEmail(email);
+      const userDoc = await userService.signup(
+        email,
+        firstName,
+        lastName,
+        null,
+        password
+      );
+      const token = authenticationService.generateToken(userDoc._id);
+      res.status(200).send(token);
     } catch (err) {
       l.error(err, "SIGNUP CONTROLLER ERROR");
+      next(err);
     }
   }
-  async login(req, res) {
-    try {
-      if (!req.body.email) {
-        res.status(400).send("Email missing!");
-      }
 
-      const userId = await userService.userExist({ email: req.body.email });
-      if (!userId) {
-        res.status(400).send("Email does not exist!");
-      } else {
-        const token = authenticationService.generateToken(userId);
-        res.status(200).send(token);
-      }
+  async login(req, res, next) {
+    try {
+      const { email, password } = req.body;
+
+      const userDoc = await userService.login(email, password);
+      const token = authenticationService.generateToken(userDoc._id);
+      res.status(200).send(token);
     } catch (err) {
       l.error(err, "LOGIN CONTROLLER ERROR");
+      next(err);
     }
   }
 
@@ -58,21 +59,14 @@ export class Controller {
       const code = req.body.code;
       const userData = await userService.fetchGoogleData(code);
 
-      const existingUser = await userService.userExist({
-        email: userData.email,
-      });
-      if (existingUser) {
-        const token = authenticationService.generateToken(existingUser._id);
-        return res.status(200).send(token);
-      }
-
-      const userId = await userService.signup(
+      const userDoc = await userService.googleLogin(
         userData.email,
         userData.firstName,
         userData.lastName,
         userData.avatar
       );
-      const token = authenticationService.generateToken(userId);
+
+      const token = authenticationService.generateToken(userDoc._id);
       return res.status(200).send(token);
     } catch (err) {
       l.error(err, "GOOGLE LOGIN CONTROLLER ERROR");
